# BurnRate

./: .gitignore  CHANGELOG.md  README.md  index.html  landing-page.html  mockup.html  package-lock.json  package.json
src/: main.ts  styles.css  types.ts  ui.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: api_types.rs  commands.rs  lib.rs  main.rs
